# Questionnaire

./: CMakeLists.txt  constructor.cpp  constructor.h  constructor.ui  freeanswer.cpp  freeanswer.h  freeanswer.ui  itojson.h  main.cpp  multipleanswer.cpp  multipleanswer.h  multipleanswer.ui  question.cpp  question.h  question.ui  readyanswers.cpp  readyanswers.h  readyanswers.ui  roomforlist.cpp  roomforlist.h  roomforlist.ui  singleanswer.cpp  singleanswer.h  singleanswer.ui
